syntax = "proto3";

option go_package = "kivicache/cache";


package cache;

service KiviCacheService {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (KeyValue) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
    string key = 1;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
    int32 expiresSec = 3;
}

message PutResponse {
    string result = 1;
    string error = 2;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    string result = 1;
    string error = 2;
}